--- a/imageGallery.html
+++ b/imageGallery.html
@@ -12,8 +12,8 @@
 <body>
     <div class="responsive">
         <div class="gallery">
-            <a target="_blank" href="1271a5023ed8f830ff48e66f80e086f5.jpg">
-                <img src="1271a5023ed8f830ff48e66f80e086f5.jpg" alt="Yeni1" width="600" height="400">
+            <a target="_blank" href="İmg/1271a5023ed8f830ff48e66f80e086f5.jpg">
+                <img src="İmg/1271a5023ed8f830ff48e66f80e086f5.jpg" alt="Yeni1" width="600" height="400">
             </a>
             <div class="desc">
                 Güzel Bir Resim
@@ -22,8 +22,8 @@
     </div>
     <div class="responsive">
         <div class="gallery">
-            <a target="_blank" href="1ac79d72437cbbf90778a0211f3c3c46.jpg">
-                <img src="1ac79d72437cbbf90778a0211f3c3c46.jpg" alt="Yeni2" width="600" height="400">
+            <a target="_blank" href="İmg/1ac79d72437cbbf90778a0211f3c3c46.jpg">
+                <img src="İmg/1ac79d72437cbbf90778a0211f3c3c46.jpg" alt="Yeni2" width="600" height="400">
             </a>
             <div class="desc">
                 Güzel Bir Resim
@@ -32,8 +32,8 @@
     </div>
     <div class="responsive">
         <div class="gallery">
-            <a target="_blank" href="d98801a6219bb43c5d7001309671f78c.jpg">
-                <img src="d98801a6219bb43c5d7001309671f78c.jpg" alt="Yeni4" width="600" height="400">
+            <a target="_blank" href="İmg/d98801a6219bb43c5d7001309671f78c.jpg">
+                <img src="İmg/d98801a6219bb43c5d7001309671f78c.jpg" alt="Yeni4" width="600" height="400">
             </a>
             <div class="desc">
                 Güzel Bir Resim
