Yeni resim eklendi

--- a/imageGallery.html
+++ b/imageGallery.html
@@ -32,6 +32,16 @@
     </div>
     <div class="responsive">
         <div class="gallery">
+            <a target="_blank" href="İmg/9d78de5b64279be431e2dab250581e17.jpg">
+                <img src="İmg/9d78de5b64279be431e2dab250581e17.jpg" alt="Yeni3" width="600" height="400">
+            </a>
+            <div class="desc">
+                Güzel Bir Resim
+            </div>
+        </div>
+    </div>
+    <div class="responsive">
+        <div class="gallery">
             <a target="_blank" href="İmg/d98801a6219bb43c5d7001309671f78c.jpg">
                 <img src="İmg/d98801a6219bb43c5d7001309671f78c.jpg" alt="Yeni4" width="600" height="400">
             </a>
@@ -42,7 +52,14 @@
     </div>
     <div class="clearFix"></div>
     <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum soluta dolore quod suscipit iusto labore, corrupti similique pariatur impedit hic, dolor odio id eos delectus error aliquid esse voluptates possimus odit magnam reprehenderit. Accusantium laborum perspiciatis minus magnam impedit sed alias, totam et ullam reprehenderit. Nesciunt, quibusdam. Quis iusto cum mollitia assumenda ducimus voluptates esse adipisci sint tempora dolore vero quibusdam cumque officiis maiores id aliquam nihil quod, cupiditate et voluptatem. Ad, facilis assumenda eum odit recusandae cupiditate numquam ab repellat itaque in distinctio pariatur excepturi laboriosam voluptate ex! Quis tenetur vero, porro qui ut in labore vel esse ipsum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum soluta dolore quod suscipit iusto
+            labore, corrupti similique pariatur impedit hic, dolor odio id eos delectus error aliquid esse
+            voluptates possimus odit magnam reprehenderit. Accusantium laborum perspiciatis minus magnam impedit sed
+            alias, totam et ullam reprehenderit. Nesciunt, quibusdam. Quis iusto cum mollitia assumenda ducimus
+            voluptates esse adipisci sint tempora dolore vero quibusdam cumque officiis maiores id aliquam nihil
+            quod, cupiditate et voluptatem. Ad, facilis assumenda eum odit recusandae cupiditate numquam ab repellat
+            itaque in distinctio pariatur excepturi laboriosam voluptate ex! Quis tenetur vero, porro qui ut in
+            labore vel esse ipsum?</p>
     </div>
 </body>
 
