--- a/imageGallery.html
+++ b/imageGallery.html
@@ -5,11 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive İmage Gallery</title>
+    <title>Fotoğraf Galerisi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="logo">
+            <h2>FOTO GALERİ</h2>
+        </div>
+        <div class="nav-link">
+            <a href="#Anasayfa">Anasayfa</a>
+            <a href="#fotograflar">Fotoğraflar</a>
+            <button class="yeni-foto">Sende Fotoğraf Ekle</button>
+        </div>
+    </div>
     <div class="responsive">
         <div class="gallery">
             <a target="_blank" href="İmg/1271a5023ed8f830ff48e66f80e086f5.jpg">
@@ -20,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="responsive">
+    <div  id="Anasayfa" class="responsive">
         <div class="gallery">
             <a target="_blank" href="İmg/1ac79d72437cbbf90778a0211f3c3c46.jpg">
                 <img src="İmg/1ac79d72437cbbf90778a0211f3c3c46.jpg" alt="Yeni2" width="600" height="400">
